--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -21,7 +21,7 @@ body {
 .container .title {
   text-align: center;
   font-size: 5rem;
-  font-family: "Loyal Fame";
+  font-family: "Loyal Fame" !important;
   color: #fff;
   padding: 0 0 5rem 0;
   font-weight: 700;
@@ -129,9 +129,18 @@ hr {
   height: 5rem;
 }
 
-@media (min-width: 1200px) {
+@media (max-width: 768px) {
   .container {
-    max-width: 40%;
+    max-width: 90%;
+  }
+  .container .title {
+    font-size: 3rem;
+  }
+  .container form .form-group {
+    flex-direction: column;
+  }
+  .container form .form-group .btn-search {
+    margin-top: 5rem;
   }
 }
 
